Replaced Herb with Devonious and fixed a responsive issue with the layout of the character sprites on mobile by adding some padding to the top of .characterProfilePicture

--- a/css/smartphoneScreens.css
+++ b/css/smartphoneScreens.css
@@ -130,6 +130,10 @@ margin-left:0%;
     max-width: 100%;
 
 }
+
+.characterProfilePicture{
+    padding-top: 0%;
+}
 .component{
     margin-top: 0;
     padding-top: 0;
