--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,7 @@ button {
 .characterProfilePicture {
     position: relative;
     z-index: 10;
+    padding-top: 5%;
 }
 
 .characterProfileSection {
@@ -962,7 +963,7 @@ h1{
     font-size: .75ch;
     text-align: center;
     margin-right: 10%;
-    margin-top: 1%;
+    margin-top: 1.5%;
 
 }
 
